--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Will Johnson's Blog
 markdown: kramdown
 url: ""
-baseurl: "/geekyll-starter-blog"
+baseurl: "https://cranky-bell-6260f3.netlify.app/"
 
 # for atom feed
 author:
-  name: Sharad Raj
+  name: Will Johnson
   email: hey@williamjohnson.dev
   image: "https://avatars0.githubusercontent.com/u/40403549?s=460&u=0dd089a9c8a13b2e682277101fe6705978326cf7&v=4"
   bio: Web Developer Sharing What I Learn With Others
