--- a/_config.yml
+++ b/_config.yml
@@ -27,4 +27,4 @@ defaults:
       path: "_posts"
     values:
       layout: "post"
-      permalink: /posts/:categories/:year/:month/:day/:title/
+      permalink: /posts/:title/
